# ROOT-Sim

./: .codecov.yml  .gitignore  .travis.yml  ASSOLUTAMENTE-DA-FARE  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README.md  \  _config.yml  about.md  aclocal.m4  autogen.sh  bound  bump-version.sh  confdefs.h  configure  configure.ac  documentation.md  getting-started.md  index.md  installation.md  just_rootsim.sh  libraries.md  libtool  lp_mark_inverse.c  params.json  sample-model.md  start_gdb.sh  start_model.sh  start_test.sh  start_test_no_comp.sh  tests.sh  update-copyright.sh  usage.md
doc/: Makefile.am  Makefile.in  doxy-pages.h  doxy.conf.in  header.html
man/: ABM.7.md  Makefile.am  Makefile.in  Numerical.7.md  OnGVT.3  OnGVT.3.md  Poisson.3.md  ProcessEvent.3  ProcessEvent.3.md  ROOT-Sim.7  ROOT-Sim.7.md  ROOT-Sim.h.3  ROOT-Sim.h.3.md  ScheduleNewEvent.3  SetState.3  Topology.7.md  generate.sh  rootsim.3
scripts/: Makefile.am  Makefile.in  hijacker-conf.xml  ld-data1  ld-data2  ld-final  mixed.xml  reverse-generator.c  rootsim-cc.in  rootsim_gen_exposed.sh  tests.sh  travis-build-doc.sh  travis-build.sh  travis-docs.sh  travis-select-llvm.sh
src/: Makefile.am  Makefile.in  ROOT-Sim.h  doxy-pages.h  lp_mark_inverse.c  main.c
src/arch/: asm_defines.c  atomic.h  instruction.h  instruction_2.h  jmp.h  memusage.c  memusage.h  os.h  parse-x86.c  thread.c  thread.h  ult.c  ult.h  x86.c  x86.h
src/arch/linux/: jmp.S  jmp.h  jmp_other.c  prova.c
src/arch/linux/modules/: Makefile.am  load.sh  unload.sh
src/arch/linux/modules/cross_state_manager/: Makefile  cross_state_manager.c  cross_state_manager.h  load.sh
src/arch/linux/modules/group/: group_manager.c  group_manager.h
src/arch/linux/modules/intercept/: Makefile  load.sh  my_page_fault.c  traps-dummy.h
src/arch/linux/modules/ktblmgr/: ktblmgr.c  ktblmgr.h
src/arch/linux/modules/schedule-hook/: Makefile  hook.S  ld.c  lend.h  schedule-hook.c  schedule-hook.h  schedule.c  schedule.h
src/arch/x86/: disassemble.c  disassemble.h  ecs_callback.S  ime.c  ime.h  jmp.S  jmp.h  preempt_callback.S
src/arch/x86/linux/: Makefile.am  load.sh  unload.sh
src/arch/x86/linux/cross_state_manager/: 83-cross_state_manager.rules  cross_state_manager.c  cross_state_manager.h  load.sh
src/arch/x86/linux/intercept/: Makefile  intercept_page_fault.c  unload.sh
src/arch/x86/linux/rootsim/: 83-rootsim.rules  Makefile  device.c  fault.c  fault_handler.S  idt.c  ioctl.c  ioctl.h  main.c  pagetable.c  rootsim.h  scheduler.c  timer.c
src/arch/x86/linux/schedule-hook/: Makefile  hook.S  ld.c  ld.h  lend.h  (+2 more)
src/communication/: communication.c  communication.h  gvt.c  gvt.h  mpi.c  mpi.h  window.c  wnd.c  wnd.h
src/compiler/: rootsim-cc.cpp  rootsim-cc.in
src/core/: backtrace.h  core.c  core.h  init.c  init.h  power.c  power.h  timer.h
src/datatypes/: array.c  array.h  bitmap.h  calqueue.c  calqueue.h  hash_map.c  hash_map.h  heap.c  heap.h  list.c  list.h  msgchannel.c  msgchannel.h  slab.c  slab.h  treiber.c  treiber.h
src/exc/allocator/: allocator.c  allocator.h
src/exc/asm/: asm_io.S  asm_io.h
src/gvt/: .gvt.c.swp  cancelback.c  ccgs.c  ccgs.h  fossil.c  gvt.c  gvt.h  models.c
src/lib/: abm_layer.c  abm_layer.h  jsmn.h  jsmn_helper.c  jsmn_helper.h  numerical.c  numerical.h  parseparam.c  topology.c  topology.h
src/lib-wrapper/: math.c  stdlib.c  wrapper.c
src/lib/topology/: costs.c  obstacles.c  probabilities.c  topology.c  topology_costs.c  topology_obstacles.c  topology_probabilities.c
src/mm/: .dymelor.c.swo  .ecs.c.swk  .ecs.c.swl  .ecs.c.swm  .ecs.c.swn  .ecs.c.swo  .ecs.c.swp  .segment.c.swo  .segment.c.swp  allocator.c  allocator.h  allocator_ecs.c  allocator_ecs.h  approximated_rollback.c  bh-manager.c  bh-manager.h  bh.c  bh.h  buddy.c  buddy.h  checkpoints.c  dymelor.c  dymelor.h  ecs.c  ecs.h  ecs_callback.S  globvars.c  globvars.h  lp-alloc.c  malloc.c  malloc.h  mapmove.c  mapmove.h  memtrace.c  memtrace.h  mm.h  numa.c  numa.h  platform.c  pool.c  (+11 more)
src/mm/modules/intercept/: intercept.mod.c  my_page_fault.c
src/mm/modules/ktblmgr/: ktblmgr.c  ktblmgr.h
src/mm/numa/: allocator.c  allocator.h  bh-manager.c  bh-manager.h  mapmove.c  mapmove.h
src/mm/numa/src/: allocator.c  allocator.h  bh-manager.c  mapmove.c  mapmove.h
src/mm/numa/test/: err  test  test.c
src/mm/numa/test-bh/: err  test  test.c
src/mm/numa/test-p/: test  test.c
src/plugin/: gcc-common.h  gcc-generate-gimple-pass.h  memtrace.cc  memtrace_bak.c
src/powercap/: config.txt  heuristics.c  macros.h  powercap.c  powercap.h  stats_t.h
src/queues/: queues.c  queues.h  reverse.c  xxhash.c  xxhash.h
src/reverse/: reverse.c  reverse.h
src/scheduler/: .process.h.swp  .scheduler.c.swp  binding.c  binding.h  control.c  group.c  group.h  ht_sched.c  ht_sched.h  preempt.c  preempt_callback.S  process.c  process.h  scheduler.c  scheduler.h  stf.c  stf.h
src/score/: score.c  score.h
src/serial/: serial.c  serial.h
src/shell/: Makefile.am  Makefile.in  execute.c  globals.h  shell.c  yy_bison.y  yy_flex.l
src/simulator/: Makefile.am  Makefile.in  ROOT-Sim.h  main.c
src/simulator/lib/: numerical.c  numerical.h  parseparam.c  topology.c
src/simulator/subsystems/arch/: os.h  thread.c  thread.h  ult.c  ult.h
src/simulator/subsystems/communication/: communication.c  communication.h  window.c
src/simulator/subsystems/core/: backtrace.h  core.c  core.h  init.c  timer.h
src/simulator/subsystems/datatypes/: array.c  list.c  list.h
src/simulator/subsystems/gvt/: ccgs.c  ccgs.h  fossil.c  gvt-fujimoto.c  gvt-nostro.c  gvt-old.c  gvt-old.h  gvt.c  gvt.h
src/simulator/subsystems/lib-wrapper/: wrapper.c
src/simulator/subsystems/mm/: checkpoints.c  dymelor.c  dymelor.h  lp-alloc.c  malloc.c  malloc.h  state.c  state.h
src/simulator/subsystems/queues/: queues.c  queues.h
src/simulator/subsystems/scheduler/: control.c  process.h  scheduler.c  scheduler.h  stf.c  stf.h
src/simulator/subsystems/statistics/: statistics.c  statistics.h
src/statistics/: new_stats.c  new_stats.h  statistics.c  statistics.h
(+3259 files in other folders)
